--- a/src/styles/UserDetails.css
+++ b/src/styles/UserDetails.css
@@ -1,6 +1,53 @@
-.user-details{
-    max-height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* .user-details {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+.add-user {
+  text-decoration: none;
+  cursor: pointer;
+  /* margin: 2rem auto; */
+}
+
+.table {
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  /* display: block; */
+}
+
+.table td,
+.table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.table tr:hover {
+  background-color: #ddd;
+}
+
+.table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4caf50;
+  color: #fff;
+}
+
+.photo {
+  width: 64px;
+  height: 64px;
+}
+
+button {
+  border: 1px solid #ddd;
+  padding: 8px;
 }
