--- a/src/styles/AddUser.css
+++ b/src/styles/AddUser.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: billabong, "billabongregular";
+  font-family: "Times New Roman", Times, serif;
   text-align: center;
   font-weight: 500;
   font-size: 3rem;
@@ -12,7 +12,7 @@ h1 {
 .form {
   width: 360px;
   padding: 0 0 0;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .form input {
