--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -38,7 +38,7 @@ h1 {
   text-align: center;
   width: 100%;
   color: #111;
-  font-weight: lighter;
+  font-weight: bolder;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
