--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -3,7 +3,7 @@
   text-decoration: none;
   font-size: 1.2rem;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .wrapper {
